--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -100,9 +100,10 @@
         {% else %}
           <a href="/pages/about-us" class="mobile-nav-link">About</a>
           <a href="/pages/contact-us" class="mobile-nav-link">Contact</a>
-          <a href="/collections/all" class="mobile-nav-link">Products</a>
+          <a href="{{ routes.all_products_collection_url }}" class="mobile-nav-link">Products</a>
         {% endif %}
       </div>
+      
       <div class="mobile-menu-footer">
         {% if shop.customer_accounts_enabled %}
           <a href="{{ routes.account_url }}" class="mobile-account-link" tabindex="0">
