product card hover effect background colour change

--- a/sections/featured-products.liquid
+++ b/sections/featured-products.liquid
@@ -102,6 +102,9 @@
     overflow: hidden;
     background: var(--green100, #e3f5d7);
   }
+  .product-image-container:hover {
+    background: var(--green400, #e3f5d7);
+  }
 
   .featured-product-image {
     position: absolute;
