--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -7,6 +7,10 @@
     {% # Load and preload the critical CSS %}
     {{ 'critical.css' | asset_url | stylesheet_tag: preload: true }}
 
+
+    {% comment %} Load Tailwind CSS {% endcomment %}
+    {{ 'style.css' | asset_url | stylesheet_tag: preload: true }}
+
     {% # Social, title, etc. %}
     {% render 'meta-tags' %}
 
