--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,5 +1,5 @@
 <header>
-  <h2 class="header__title">
+  <h2 class="header__title text-4xl">
     {{ shop.name | link_to: routes.root_url }}
   </h2>
 
