--- a/sections/custom-section.liquid
+++ b/sections/custom-section.liquid
@@ -1,44 +1,14 @@
-<div class="custom-section full-width">
+<div class="custom-section full-width relative overflow-hidden w-full">
   {% if section.settings.background_image %}
-    <div class="custom-section__background">
+    <div class="custom-section__background absolute w-full h-full z-[-1] overflow-hidden">
       {{ section.settings.background_image | image_url: width: 2000 | image_tag }}
     </div>
   {% endif %}
 
-  <div class="custom-section__content">
+  <div class="custom-section__content grid grid-cols-[minmax(var(--page-margin),1fr)_min(calc(var(--page-width)-var(--page-margin)*2),calc(100%-var(--page-margin)*2))_minmax(var(--page-margin),1fr)]">
     {% content_for 'blocks' %}
   </div>
 </div>
-
-{% stylesheet %}
-  .custom-section {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-  }
-  .custom-section__background {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    overflow: hidden;
-  }
-  .custom-section__background img {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  .custom-section__content {
-    display: grid;
-    grid-template-columns: var(--content-grid);
-  }
-  .custom-section__content > * {
-    grid-column: 2;
-  }
-{% endstylesheet %}
 
 {% schema %}
 {
