--- a/sections/hello-world.liquid
+++ b/sections/hello-world.liquid
@@ -2,133 +2,55 @@
   Welcome to Shopify theme development!
 {% endcomment %}
 
-<div class="welcome full-width">
-  <div class="welcome-content">
+<div class="welcome full-width grid grid-cols-[minmax(var(--page-margin),1fr)_min(calc(var(--page-width)-var(--page-margin)*2),calc(100%-var(--page-margin)*2))_minmax(var(--page-margin),1fr)] bg-gray-100 py-18">
+  <div class="welcome-content grid-cols-2 flex justify-between items-center gap-4 w-full px-6">
     <div>
-      <h1>Hello, World!</h1>
+      <h1 class="text-2xl font-bold">Hello, World!</h1>
 
-      <p class="welcome-description">
+      <p class="welcome-description max-w-80ch leading-[1.4] mt-6">
         The Skeleton theme is a minimal, carefully structured Shopify theme designed to help you quickly get started.
         Designed with modularity, maintainability, and Shopify's best practices in mind.
       </p>
 
-      <p class="welcome-description">
+      <p class="welcome-description max-w-80ch leading-[1.4] mt-6">
         Themes shape the online store experience for merchants and their customers. Build fast, flexible themes at scale
         using Liquid, Shopify's theme templating language, along with HTML, CSS, JavaScript, and JSON.
       </p>
     </div>
-    <div class="icon">
+    <div class="icon w-75">
       <img src="{{ 'shoppy-x-ray.svg' | asset_url }}" width="300" height="300">
     </div>
   </div>
 </div>
 
-<div class="highlights">
-  <div class="highlight">
-    <h3>Key Concepts</h3>
-    <p class="highlight-description">
+<div class="highlights grid gap-8 grid-cols-3 mt-12.5">
+  <div class="highlight flex flex-col h-full p-6 rounded-lg bg-blue-100 text-gray-700 leading-[1.4]">
+    <h3 class="text-sm font-bold text-gray-800">Key Concepts</h3>
+    <p class="highlight-description flex-1 mt-4">
       Shopify themes are a package of template files, building blocks, and supporting assets. Use these building blocks
       to create modular, customizable themes.
     </p>
-    <p>{{ 'Learn more about key concepts' | link_to: 'https://shopify.dev/docs/storefronts/themes/architecture' }}</p>
+    <p class="mt-4">{{ 'Learn more about key concepts' | link_to: 'https://shopify.dev/docs/storefronts/themes/architecture' }}</p>
   </div>
 
-  <div class="highlight">
-    <h3>Liquid</h3>
-    <p class="highlight-description">
+  <div class="highlight flex flex-col h-full p-6 rounded-lg bg-blue-100 text-gray-700 leading-[1.4]">
+    <h3 class="text-sm font-bold text-gray-800">Liquid</h3>
+    <p class="highlight-description flex-1 mt-4">
       The Liquid templating language is the backbone of Shopify themes, and is used to load dynamic content on
       storefronts. Extend Liquid objects to store and present custom data using metafields.
     </p>
-    <p>{{ 'View the Liquid reference' | link_to: 'https://shopify.dev/docs/api/liquid' }}</p>
+    <p class="mt-4">{{ 'View the Liquid reference' | link_to: 'https://shopify.dev/docs/api/liquid' }}</p>
   </div>
 
-  <div class="highlight">
-    <h3>Best Practices</h3>
-    <p class="highlight-description">
+  <div class="highlight flex flex-col h-full p-6 rounded-lg bg-blue-100 text-gray-700 leading-[1.4]">
+    <h3 class="text-sm font-bold text-gray-800">Best Practices</h3>
+    <p class="highlight-description flex-1 mt-4">
       To optimize your theme development experience, Shopify has established a set of best practices that you can refer
       to when developing your theme and setting up your toolchains and processes.
     </p>
-    <p>{{ 'Follow best practices' | link_to: 'https://shopify.dev/docs/storefronts/themes/best-practices' }}</p>
+    <p class="mt-4">{{ 'Follow best practices' | link_to: 'https://shopify.dev/docs/storefronts/themes/best-practices' }}</p>
   </div>
 </div>
-
-{% stylesheet %}
-  .welcome {
-    display: grid;
-    grid-template-columns: var(--content-grid);
-    background-color: #f6f6f7;
-    padding: 72px 0;
-  }
-
-  .welcome-content {
-    grid-column: 2;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-    width: 100%;
-    padding: 0 24px;
-  }
-
-  .welcome-description {
-    max-width: 80ch;
-    line-height: 1.4;
-    margin-top: 1.5rem;
-  }
-
-  .icon {
-    width: 300px;
-  }
-
-  .highlights {
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(3, 1fr);
-    margin-top: 50px;
-  }
-
-  @media (max-width: 1100px) {
-    .highlights {
-      grid-template-columns: 1fr;
-    }
-  }
-
-  .highlight {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    padding: 24px;
-    border-radius: 8px;
-    background-color: #eef3ff;
-    color: rgb(92, 95, 98);
-    line-height: 1.4;
-  }
-
-  .highlight > * + * {
-    margin-top: 1rem;
-  }
-
-  .highlight h3 {
-    font-size: 1rem;
-    color: rgb(32, 34, 35);
-  }
-
-  .highlight-description {
-    flex: 1 1;
-  }
-
-  .highlight a {
-    display: flex;
-    width: fit-content;
-    background-color: rgb(250, 251, 251);
-    box-shadow: rgba(0, 0, 0, 0.2) 0px -3px 0px 0px inset, rgba(255, 255, 255, 0.9) 0px 2px 0px 0px inset;
-    border: 1px solid rgb(140, 145, 150);
-    border-radius: 4px;
-    color: rgb(92, 95, 98);
-    padding: 3px 10px 5px;
-    text-decoration: none;
-  }
-{% endstylesheet %}
 
 {% schema %}
 {
